# ratelnet

./: LICENSE  README.md
ratel-dlp/: Makefile  app-lock.txt  dev-lock.txt  pyproject.toml  reqs-dev.in  requirements-dev.txt  requirements.txt
ratel-dlp/src/dlp/: asgi.py  manage.py  scanner.py  settings.py  urls.py  views.py  wsgi.py
ratel-dlp/tests/: test_check_content.py  test_project_layout.py
ratelnet/: README.md
